rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__folder-with-font-attribute__decoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Folder
  class: Folder
  properties:
    Attributes:
      Attributes:
        AFontAttribute:
          Font:
            family: "rbxasset://fonts/families/Creepster.json"
            weight: Regular
            style: Normal
            cachedFaceId: ~
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
  children: []
